<resources>
    <string name="app_name">mobile2k21</string>
    <string name="to_first_task_label">First Task</string>
    <string name="to_second_task_label">Second Task</string>
    <string name="to_third_task_label">Third Task</string>
    <string name="counters_start_text">Start</string>
    <string name="counters_stop_text">Stop</string>
    <string name="counters_reset_text">Reset</string>
    <string name="zero">0</string>
    <string name="up_arrow">▲</string>
    <string name="down_arrow">▼</string>
    <string name="load_cat_button">Load Cat</string>
    <string name="counter_speed_text">Speed</string>
    <string name="toast">Toast</string>
    <string name="toast_text">It`s toast!</string>
    <string name="hide_list">Hide List</string>
    <string name="show_list">Show List</string>
    <string name="change_color_text_label">Изменить цвет текста</string>
    <string name="colored_text_label">Цвет этого текста должен меняться</string>
    <string name="natural_counter_button">NAT</string>
    <string name="fibonacci_counter_button">FIB</string>
    <string name="prime_counter_button">PRIME</string>
    <string name="detail_screen_icon_text">detail_screen_icon</string>
    <string name="details_image_text">details_image</string>
    <string name="fab">FAB</string>
    <string name="cats_cats_cats">cats cats cats</string>
    <string name="error_occured_text">An error has occurred: %1$s</string>
    <string name="halp">halp</string>
    <string name="detail_screen_icon">detail_screen_icon</string>
</resources>