<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".second.counter.CounterView">

    <TextView
        android:id="@+id/counter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/zero"
        android:textColor="@color/dark_grey"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/counter_speed_up"
            style="@style/speedButton"
            android:text="@string/up_arrow" />

        <Button
            android:id="@+id/counter_slow_down"
            style="@style/speedButton"
            android:text="@string/down_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/counter_speed_text"
            android:textColor="@color/dark_grey" />

    </LinearLayout>
</LinearLayout>
