<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cats_cats_cats" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cat_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/halp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cat_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/halp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/zero" />

        </LinearLayout>
    </GridLayout>





    <Button
        android:id="@+id/load_cat_button"
        style="@style/thirdTaskButton"
        android:text="@string/load_cat_button" />

</LinearLayout>